--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <p class="c">소보루빵</p>
   <p class="d">모카빵</p>
   <p style=color:cyan>민트빵</p>
+  <a href="event.html">이벤트페이지로 이동</a>
   
 </body>
 <script>
