--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <p class="d">모카빵</p>
   <p style=color:cyan>민트빵</p>
   <a href="event.html">이벤트페이지로 이동</a>
+  <a href="components.html">컴포넌트 페이지로 이동</a>
   
 </body>
 <script>
