--- a/index.html
+++ b/index.html
@@ -4,29 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-<style>
-  p{color: red;}
-  .a{color: green;}
-</style>
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <title>Document title</title>
 <body>
-  <p>헬로 월드</p>
-  <p class="a">밤양갱</p>
-  <p class="b">초코빵</p>
-  <p class="c">소보루빵</p>
-  <p class="d">모카빵</p>
-  <p style=color:cyan>민트빵</p>
-  <a href="event.html">이벤트페이지로 이동</a>
-  <a href="components.html">컴포넌트 페이지로 이동</a>
   
-</body>
-<script>
-  let name = "who";
-  document.getElementsByClassName('c')[0].style.color = 'yellow';
-  console.log(who);
+  <a href="./pages/event.html">이벤트페이지로 이동</a>
+  <a href="./pages/components.html">컴포넌트 페이지로 이동</a>
+  <a href="./pages/form.html">폼페이지로 이동</a>
+  <a href="./pages/tag.html">태그페이지로 이동</a>
+  <a href="./pages/responsive.html"> 반응형 페이지로 이동</a>
+  <a href="./pages/openapi.html"> openapi 페이지로 이동</a>
   
-</script> 
-<scrip src=script.js></script>>
+  
+  <script src=script.js></script>>
+</body> 
 </html>
